src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;
@layer utilities {
  :root {
    --color-primary: 135 94 255;
    --color-secondary: 19 17 53;
    --color-gray: 150 149 185;
    --color-lightBlue: 153 196 239;
    --color-lightGray: 62 60 91;
    --color-lightPurple: 56 46 113;
    --color-violet: 42 32 93;
    --color-purple: 31 29 80;
    --color-success: 45 249 177;
    --color-green: 0 131 85;
    --color-violet: 42 32 93;
  }
}
/* DatePickerStyles.css */
.react-datepicker__input-container input::placeholder {
  color: #fff;
  font-style: roboto;
}

